<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    app:layout_constraintCircleRadius="10dp"
    tools:context=".MainPage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/ava1" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/yo"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/txt_city"
        app:layout_constraintStart_toStartOf="@+id/txt_city"
        app:layout_constraintTop_toBottomOf="@+id/txt_city" />

    <Button
        android:id="@+id/btn_my_helps"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/qaz"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        app:cornerRadius="10dp"
        app:icon="@drawable/right_arrow"
        app:iconGravity="end"
        app:iconTint="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_age"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_my_feedbacks"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/white"
        android:text="@string/feedbacks"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        app:cornerRadius="10dp"
        app:icon="@drawable/right_arrow"
        app:iconGravity="end"
        app:iconTint="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/btn_my_helps"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_my_helps"
        app:layout_constraintTop_toBottomOf="@+id/btn_my_helps"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/transparent"
        app:icon="@drawable/previous"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/menu"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918">

        <Button
            android:id="@+id/btnhelps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-light"
            app:icon="@drawable/heart"
            app:iconGravity="end"
            app:iconTint="@color/purple_700"
            app:iconTintMode="multiply"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:shadowColor="#673AB7"
            android:shadowDx="4"
            app:cornerRadius="0dp"
            app:icon="@drawable/mainpage"
            app:iconGravity="textEnd"
            app:iconTint="@color/purple_700" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            app:cornerRadius="0dp"
            app:icon="@drawable/edit"
            app:iconGravity="start"
            app:iconTint="@color/purple_700" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>